<resources>
    <string name="app_name">BabbelAssignment</string>
    <string name="start">Start</string>
    <string name="highscore">Highscore %s</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="score">Score %s</string>
    <string name="wrong_word">Wrong Word</string>
    <string name="right_word">Right Word</string>
    <string name="start_playing">Start playing</string>
    <string name="play_again">Play again!</string>
    <string name="cancel">Cancel</string>
    <string name="congratulations">Congratulations!</string>
    <string name="final_score">Your final score is %s</string>
    <string name="click_to_play">Click to play!</string>
    <string name="error_message">Ops, something unexpected just happened. Ours developers will fix that asap!</string>
</resources>
